Compiling using Java 1.8. Changing List.of(0 to Arrays.asList()